<resources>
    <string name="app_name">HealthyGroceryAssistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="diets">Diets (Optional)</string>
    <string name="health_labels">Health Label (Optional)</string>
    <string name="alcohol_free">alcohol-free</string>
    <string name="fish_free">fish-free</string>
    <string name="dairy_free">dairy-free</string>
    <string name="gluten_free">gluten-free</string>
    <string name="low_potassium">low-potassium</string>
    <string name="paleo">paleo</string>
    <string name="peanut_free">peanut-free</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vsegetarian</string>

    <!-- TODO: Remove or change this placeholder ingredienteCheckedView -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_seven_day">Last Seven Days</string>
    <string name="time_to_go">Time to go</string>

    <string name="last_fast_start">00:00:00</string>
    <string name="last_fast_end">00:00:00</string>
    <string name="start_fasting">START FASTING</string>
    <string name="stop_fasting">STOP FASTING</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_list">Shopping List</string>
    <string name="tools">Tools</string>
    <string name="intermittent_fasting">Intermittent Fasting</string>
    <string name="recipe_image">Recipe image</string>
    <string name="shopping_list_button">shopping list button</string>
    <string name="favorites_button">favorites button</string>

</resources>
