<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/search_recipes_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAlignment="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/diet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/diets"
        android:clickable="true"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/diets_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/diets_radio_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_balanced_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Balanced" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_high_fiber_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="High-Fiber	" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_high_protein_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="High-Protein" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/diets_radio_group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_low_carb_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Low-Carb" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_low_fat_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Low-Fat" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/diet_low_sodium_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Low-Sodium" />

        </RadioGroup>
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/health_labels_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/health_labels"
        android:clickable="true"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/health_label_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/health_label_radio_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_alcohol_free_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alcohol_free" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_dairy_free_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dairy_free" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_fish_free_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fish_free" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/health_label_radio_group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_gluten_free_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gluten_free" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_low_potassium_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low_potassium" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_paleo_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paleo" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/health_label_radio_group_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_peanut_free_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peanut_free" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_vegan_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vegan" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/health_label_vegetarian_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Vegetarian" />

        </RadioGroup>
    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>