<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/start_stop_fast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_16dp"
                android:layout_marginStart="@dimen/material_16dp"
                android:layout_marginTop="@dimen/material_16dp"
                android:background="@color/colorAccent"
                android:text="@string/start_fasting" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/last_seven_day"
                android:textSize="@dimen/material_font_subheading"
                tools:text="Last Seven Day" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_16dp"
                android:layout_marginStart="@dimen/material_16dp"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fast_entries_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <ImageView
                android:id="@+id/teaser_preview_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timer_label_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_go"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/material_font_title" />

                <TextView
                    android:id="@+id/timer_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16:00:00"
                    android:textAlignment="center"
                    android:textSize="@dimen/material_font_title" />

                <TextView
                    android:id="@+id/fast_finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/material_16dp"
                    android:text="Your fast started at:"
                    android:textAlignment="center"
                    android:textSize="@dimen/material_font_subheading" />
                <TextView
                    android:id="@+id/star_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16:00:00"
                    android:clickable="true"
                    android:textAlignment="center"
                    android:textSize="@dimen/material_font_title" />
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>